refactor a lot of code